<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_3"
        tools:context=".controllers.LoginActivity">

    <TextView
            android:id="@+id/textView"
            android:layout_width="408dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:lines="2"
            android:text="@string/create_naccount"
            android:textSize="60sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/editText_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:drawableStart="@drawable/name"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
            android:id="@+id/editText_email1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editText_password1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/t_t_t_t_tpassword"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="#FFFFFF"
            app:boxBackgroundMode="outline"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:helperText="Enter Password"
            app:helperTextEnabled="true"
            app:helperTextTextColor="#AA0F0F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_email1"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/design_default_color_primary">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_password1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:typeface="serif" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
            android:id="@+id/imageView_register"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/border_button"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.695"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_password1"
            app:srcCompat="@drawable/btn_arrow2" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_button"
            android:gravity="center"
            android:text="@string/forget_your_password_recovery_it"
            android:textColor="#689F38"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    
</androidx.constraintlayout.widget.ConstraintLayout>