<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img"
        tools:context=".controllers.LoginActivity">

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:lines="2"
            android:text="Welcome\nBack"
            android:textSize="60sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

    <EditText
            android:id="@+id/editText_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="HardcodedText" />


    <!--    <EditText-->
    <!--        android:id="@+id/editText_password"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginTop="36dp"-->
    <!--        android:layout_marginEnd="20dp"-->
    <!--        android:autofillHints=""-->
    <!--        android:drawableStart="@drawable/password"-->
    <!--        android:drawablePadding="15dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="Password"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:minHeight="48dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editText_email" />-->

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editText_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="20dp"

            android:hint="\t\t\t\t\tPassword"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="#FFFFFF"
            app:boxBackgroundMode="outline"

            app:counterEnabled="true"
            app:counterMaxLength="20"

            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:helperText="Enter Password"
            app:helperTextEnabled="true"

            app:helperTextTextColor="#AA0F0F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_email"


            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/design_default_color_primary"
            tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:typeface="serif" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
            android:id="@+id/imageView_login"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.659"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_password"
            app:srcCompat="@drawable/btn_arraw1"
            tools:ignore="SpeakableTextPresentCheck" />

    <TextView
            android:id="@+id/textView_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/are_you_new_user_register"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/button"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:layout_marginTop="88dp"
            android:backgroundTint="#D8CBCB"
            android:drawableEnd="@drawable/facebook"
            android:paddingEnd="5dp"
            android:text="@string/facebook"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_password"
            tools:ignore="RtlSymmetry" />

    <Button
            android:layout_width="170dp"
            android:layout_height="65dp"
            android:layout_marginTop="88dp"
            android:backgroundTint="#D8CBCB"
            android:drawableEnd="@drawable/google"
            android:paddingEnd="5dp"
            android:text="@string/google"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_password"
            tools:ignore="RtlSymmetry" />

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView_login"
            app:layout_constraintTop_toBottomOf="@+id/editText_password"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.494" />
</androidx.constraintlayout.widget.ConstraintLayout>