<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        tools:context=".controllers.MainActivity">

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="418dp"
            android:layout_height="176dp"
            android:layout_marginTop="4dp"
            android:importantForAccessibility="no"
            android:scaleType="fitXY"
            android:src="@drawable/top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2">

        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autoSizeTextType="none"
                android:background="@drawable/non_border_button"
                android:drawableTop="@drawable/video_call"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:maxLines="1"
                android:src="@drawable/video_call"
                android:text="@string/video_call"
                android:textColor="#010701" />

        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autoSizeTextType="none"
                android:background="@drawable/non_border_button"
                android:drawableTop="@drawable/notification"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:maxLines="1"
                android:src="@drawable/video_call"
                android:text="@string/notification"
                android:textColor="#010701" />

        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autoSizeTextType="none"
                android:background="@drawable/non_border_button"
                android:drawableTop="@drawable/video_call"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:lines="1"
                android:src="@drawable/video_call"
                android:text="@string/voice_call"
                android:textColor="#010701" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linear_layout_tv2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck">

        <TextView
                android:id="@+id/TextView_calendar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Calendar"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        <TextView
                android:id="@+id/TextView_tips"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Tips"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        <TextView
                android:id="@+id/TextView_settting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Settings"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        <TextView
                android:id="@+id/TextView_orther"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Orther"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linear_layout_tv1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout_widge_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck">

        <TextView
                android:id="@+id/TextView_inbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Inbox"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        <TextView
                android:id="@+id/TextView_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Map"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        <TextView
                android:id="@+id/TextView_chat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Chat"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        <TextView
                android:id="@+id/TextView_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Report"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/bro_chien"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.825"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="181dp"
            android:layout_height="68dp"
            android:layout_marginTop="44dp"
            android:lines="2"
            android:text="Hello\nPham Chien"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText,TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="350dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/non_border_button"
            android:drawableEnd="@drawable/search_icon_small"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="Search"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingEnd="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText,RtlSymmetry" />

    <LinearLayout
            android:id="@+id/linear_layout_widge_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout_tv1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.329">

        <ImageButton
                android:id="@+id/imageView_inbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_1"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageButton
                android:id="@+id/imageView_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_2"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageButton
                android:id="@+id/imageView_chat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_3"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageButton
                android:id="@+id/imageView_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_4"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linear_layout_widge_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout_tv2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <ImageButton
                android:id="@+id/imageView_calender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_5"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageButton
                android:id="@+id/imageView_tips"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_6"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageButton
                android:id="@+id/imageView_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_7"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageButton
                android:id="@+id/imageView_other"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_8"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <ImageView
            android:id="@+id/imageView4"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.774"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_search"
            app:srcCompat="@drawable/demo" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_upgrade"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border_button"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="left|center_vertical"
            android:lines="2"
            android:text="To get unlimited\nUpgrade your account"
            android:textColor="#0B1009"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_search"
            tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>
